# dyndns

./: Cargo.toml  README.md
.github/workflows/: rust.yml
linux/: dyndns@.service  dyndns@.timer
src/: main.rs
